<resources>
    <string name="app_name">选课系统</string>

    <!-- Strings related to login -->
    <string name="StudentNo">请输入学号</string>
    <string name="StudentPass">请输入密码</string>
    <string name="action_sign_in">登录</string>

    <string name="TeacherNo">请输入教师工号</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
