<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_horizontal"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".StudentLoginActivity">

<!-- Login progress -->
<ProgressBar
    android:id="@+id/login_progress"
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:visibility="gone" />

<ScrollView
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/student_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--学号输入-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/StudentID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/StudentNo"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:text="1625131017"
                />

        </android.support.design.widget.TextInputLayout>

        <!--密码-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/StudentPassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/StudentPass"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:text="admin"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <CheckBox
                    android:id="@+id/rememberstudentid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="记住账号" />

                <CheckBox
                    android:id="@+id/rememberstudentpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="107dp"
                    android:text="记住密码" />

            </RelativeLayout>

        </android.support.design.widget.TextInputLayout>
        <!--登录按钮-->
        <Button
            android:id="@+id/studentLogin"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_forget"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:text="忘记密码？"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textStyle="italic" />
    </LinearLayout>
</ScrollView>
</LinearLayout>